tests/negative/runtime/int_overflow_neg/input.ci
void main() {
    int x = -9223372036854775808;  // INT64_MIN
    int y = -x;
    print(toString(y) + "\n");
}
